# polyglot-cli

./: .coverage  README.md  app.py  config.py  exceptions.py  models.py  polyglot.py  pyproject.toml
.github/workflows/: ci.yml
commands/: __init__.py  cia_cmd.py  learn_cmd.py  misc_cmd.py  quiz_cmd.py  review_cmd.py  speed_cmd.py
data/: languages.json
data/builder/: patterns.json
data/clusters/: cognates.json
data/conjugations/: bg.json  cs.json  es.json  fr.json  hr.json  it.json  pl.json  pt.json  ro.json  (+3 more)
db/: database.py  polyglot.db  schema.sql
engines/: adaptive.py  builder.py  cia_drills.py  cloze.py  cluster.py  conjugation.py  custom_vocab.py  daily_challenge.py  gamification.py  palace.py  planner.py  quiz.py  sentence.py  speed_learn.py  srs.py  statistics.py
scripts/: content_quality_report.py  expand_cognates.py  gen_conjugations.py  gen_other_vocab.py  gen_romance_vocab.py  gen_slavic_vocab.py  generate_phrase_packs.py  validate_content.py
tests/: conftest.py  test_adaptive.py  test_answer_check.py  test_builder.py  test_cia_drills.py  test_cloze.py  test_cluster.py  test_conjugation.py  test_custom_vocab.py  test_daily_challenge.py  test_data_loader.py  test_database.py  test_gamification.py  test_palace.py  test_planner.py  test_quiz.py  test_sentence.py  test_speed_learn.py  test_srs.py  test_statistics.py
ui/: cia_drills_ui.py  daily_challenge_ui.py  dashboard.py  emoji_flags.py  gamification_ui.py  speed_learn_ui.py  statistics_ui.py  terminal.py
utils/: answer_check.py  audio.py  data_loader.py  transliteration.py  word_fetch.py
(+243 files in other folders)
