[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyglot-cli"
version = "2.0.0"
description = "Cluster-based language learner for 22+ languages"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
polyglot = "polyglot:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "utils.answer_check",
    "utils.data_loader",
]
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
